hphp/hack/test/typecheck/reactive/parse_multiple1.php
<?hh // strict
<<file: __EnableUnstableFeatures('coeffects_provisional')>>

class C {
  <<__Rx, __RxShallow>>
  public function f(): void {}
}
